# roboqa-temporal

./: .gitignore  .pylintrc  CONTRIBUTING.md  KITTI_dataset_calibration_quality.yaml  KITTI_dataset_calibration_quality_report.html  PROJECT_STRUCTURE.md  README.md  generate_bad_data.py  pyproject.toml  requirements.txt  requirements_feature4.txt  sync_validator.py  test_sync_validator.py
.docs/: MEMORY_OPTIMIZATION.md  RoboQA_Temporal_CSE583_Au_25_Technical_Review_Presentation.pptx  USER_COMPONENTS.md  USER_DESIGN.md  USER_STORIES.md  feature1_temporal_sync_validator.md
.github/workflows/: tests.yml
examples/: advanced_usage.py  check_pylint.py  config_anomaly_example.yaml  config_anomaly_kitti.yaml  config_example.yaml  config_fusion.yaml  config_kitti.yaml  config_sync.yaml  example_anomaly.py  example_fusion.py  export_temporal_metrics.py  feature4_demo_visuals.py  feature4_pipeline.py  generate_calibration_report.py  generate_kitti_calib.py  sync_example.py  synthetic_data_generator.py
examples/sample_output/: sample_run_calibration_quality.yaml  sample_run_calibration_quality_report.html
output_report_0005/: sync_metrics.json  sync_report.html
output_report_0054/: sync_metrics.json  sync_report.html
roboqa_temporal/cli/: __init__.py
tests/: conftest.py  feature4_helpers.py  test_bag_loader.py  test_calibration_quality_validator.py  test_detection_pipeline.py  test_edge.py  test_feature4_benchmarking_sayali.py  test_one_shot.py  test_pattern.py  test_pylint.py  test_reporting_feature4.py  test_smoke.py  test_temporal_sync_validator.py
(+42 files in other folders)
